[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/sheet.png" type="Texture" id=1]
[ext_resource path="res://assets/progress_full.png" type="Texture" id=2]
[ext_resource path="res://scenes/Planet.gd" type="Script" id=3]
[ext_resource path="res://assets/progress_empty.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 256, 128, 128 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "gas1",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "belt",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "gas2",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=12]
radius = 14.1521

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1024, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 896, 640, 128, 128 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 14 ) ],
"loop": true,
"name": "solar",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ) ],
"loop": true,
"name": "miner",
"speed": 5.0
} ]

[node name="Planet" type="Node2D" groups=[
"planets",
]]
script = ExtResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.75, -0.0360138 )
scale = Vector2( 0.122489, 0.123501 )
frames = SubResource( 8 )
frame = 1
speed_scale = 0.7
playing = true

[node name="SelectionSprite" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 0.148438, 0.154727 )
frames = SubResource( 11 )
playing = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 12 )

[node name="Timer" type="Timer" parent="."]

[node name="Progress" type="TextureProgress" parent="."]
margin_left = -18.0
margin_top = 13.0
margin_right = 19.0
margin_bottom = 21.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 2 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildSlots" type="Node2D" parent="."]

[node name="Slot1" type="AnimatedSprite" parent="BuildSlots"]
visible = false
position = Vector2( 0, -13.9055 )
scale = Vector2( 0.0616412, 0.0616412 )
frames = SubResource( 15 )
animation = "solar"

[node name="Slot2" type="AnimatedSprite" parent="BuildSlots"]
visible = false
position = Vector2( -12.3939, 7.86805 )
scale = Vector2( 0.0616412, 0.0616412 )
frames = SubResource( 15 )
animation = "solar"

[node name="Slot3" type="AnimatedSprite" parent="BuildSlots"]
visible = false
position = Vector2( 14.0799, 7.86805 )
scale = Vector2( 0.0616412, 0.0616412 )
frames = SubResource( 15 )
animation = "solar"

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
